// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip should also handle on click instead of hover 1`] = `
[
  <article
    className="tooltip tooltip--click"
    onClick={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      Hinweis grün!
    </span>
  </article>,
  <article
    className="tooltip tooltip--click"
    onClick={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      <article
        className="pa3 gray6 c-gray1"
      >
        <div
          className="f6 ma0 mb2"
        >
          <i
            className="fas fa-home mr2"
          />
          Tooltip mit Überschrift
        </div>
        <p>
          Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
          <br />
          Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
        </p>
        <div>
          <a
            href="https://www.phoenixreisen.com"
          >
            Zu Phoenix Reisen
          </a>
        </div>
      </article>
    </span>
  </article>,
]
`;

exports[`Tooltip should also render React Components as tooltip 1`] = `
<article
  className="tooltip "
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-text"
  >
    Ich bin ein Tooltip
  </span>
  <span
    className="tip  tip--below tip--hidden"
  >
    <article
      className="pa3 gray6 c-gray1"
    >
      <div
        className="f6 ma0 mb2"
      >
        <i
          className="fas fa-home mr2"
        />
        Tooltip mit Überschrift
      </div>
      <p>
        Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
        <br />
        Hier etwas mehr Text. Hier etwas mehr Text. Hier etwas mehr Text.
      </p>
      <div>
        <a
          href="https://www.phoenixreisen.com"
        >
          Zu Phoenix Reisen
        </a>
      </div>
    </article>
  </span>
</article>
`;

exports[`Tooltip should have some default classes 1`] = `
<article
  className="tooltip "
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-text"
  >
    Tooltip
  </span>
  <span
    className="tip  tip--below tip--hidden"
  >
    Hinweis!
  </span>
</article>
`;

exports[`Tooltip should render colors 1`] = `
[
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      Hinweis grüm!
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      Hinweis grüm!
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      Hinweis grüm!
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      Hinweis grüm!
    </span>
  </article>,
]
`;

exports[`Tooltip should render positions 1`] = `
[
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--left tip--hidden"
    >
      Hinweis left!
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--right tip--hidden"
    >
      Hinweis rechts!
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--below tip--hidden"
    >
      Hinweis drunter!
    </span>
  </article>,
  <article
    className="tooltip "
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="tooltip-text"
    >
      Tooltip
    </span>
    <span
      className="tip  tip--above tip--hidden"
    >
      Hinweis drüber!
    </span>
  </article>,
]
`;

exports[`Tooltip should render text with icon 1`] = `
<article
  className="tooltip "
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="tooltip-text"
  >
    <div>
      <i
        className="fas fa-blabla"
      />
       How to live?!
    </div>
  </span>
  <span
    className="tip  tip--below tip--hidden"
  >
    WORK HARD, PLAY HARD
  </span>
</article>
`;
